<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/mavenpro_medium"
            android:text="@string/hello"
            android:textColor="@color/colorWhite"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/mavenpro_regular"
            android:gravity="bottom"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_home"
            android:fontFamily="@font/mavenpro_medium"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/txt_art"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_home"
            android:fontFamily="@font/mavenpro_medium"
            android:gravity="center"
            android:text="@string/artists"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_event"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_home"
            android:fontFamily="@font/mavenpro_medium"
            android:gravity="center"
            android:text="@string/event_info"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_camp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_home"
            android:fontFamily="@font/mavenpro_medium"
            android:gravity="center"
            android:text="@string/camping"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_faq"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_home"
            android:fontFamily="@font/mavenpro_medium"
            android:gravity="center"
            android:text="@string/faqs"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_app"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_home"
            android:fontFamily="@font/mavenpro_medium"
            android:gravity="center"
            android:text="@string/applications"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_contact"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_home"
            android:fontFamily="@font/mavenpro_medium"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_ticket"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_background_home"
            android:fontFamily="@font/mavenpro_medium"
            android:gravity="center"
            android:text="@string/tickets"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
