<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_background">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_background"
        android:fontFamily="@font/mavenpro_medium"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/txt_register"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_background"
        android:fontFamily="@font/mavenpro_medium"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:background="@drawable/rounded_corner_progress"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Loading..."
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_toStartOf="@+id/txt_load"
            android:layout_toLeftOf="@+id/txt_load"
            android:indeterminate="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
    </RelativeLayout>


</RelativeLayout>